<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/rate_me_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0sp" android:textColor="@color/dark_grey" android:gravity="center" android:orientation="horizontal" android:id="@id/plugin_connected_title" android:background="@color/rate_me_bgcolor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="22.0dip" android:layout_marginRight="20.0dip" android:text="@string/wemo_ap_title" />
    <TextView android:textSize="16.0sp" android:textColor="@color/rate_me_description_color" android:gravity="center" android:orientation="horizontal" android:id="@id/rate_me_text" android:background="@color/rate_me_bgcolor" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/wemo_ap_text" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="?android:dividerHorizontal" android:showDividers="middle">
        <View android:background="@color/rate_me_divider_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/wemo_green2" android:orientation="horizontal" android:id="@id/btn_wemo_ap_dismiss" android:background="@color/rate_me_bgcolor" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/dismiss" android:layout_weight="1.0" style="?android:attr/borderlessButtonStyle" />
        <View android:background="@color/rate_me_divider_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <Button android:textSize="14.0sp" android:textColor="@color/wemo_green2" android:orientation="horizontal" android:id="@id/btn_wemo_ap_not_again" android:background="@color/rate_me_bgcolor" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/btn_dont_show_again_label" android:layout_weight="1.0" style="?android:attr/borderlessButtonStyle" />
        <View android:background="@color/rate_me_divider_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </LinearLayout>
</LinearLayout>